# olist-seller-dashboard

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
claude_eda/: generate_product_names.py  product_cluster_analysis_data.csv  product_cluster_analysis_stats.csv  seller_cluster_analysis_data.csv  seller_cluster_analysis_stats.csv  warehouse_recommendations.csv  warehouse_scenario_comparison.csv  warehouse_state_gap_analysis.csv
claude_eda/dashboard/: DASHBOARD_METHODOLOGY.md  app.py  config.py
claude_eda/dashboard/components/: cards.py  charts.py
claude_eda/dashboard/data/: delivery_analyzer.py  inventory_loader.py  loader.py  logistics_analyzer.py  market_analyzer.py  preprocessor.py
claude_eda/dashboard/engine/: benchmarks.py  delivery_rules.py  health_score.py  review_analyzer.py  rule_engine.py
claude_eda/dashboard/utils/: formatting.py  korean.py
claude_eda/dashboard/views/: consulting.py  dashboard.py  delivery_inventory_consulting.py  logistics_consulting.py  market_opportunity.py  methodology.py
olist-ecommerce/data/inventory/: olist_reorder_rules.csv  olist_seller_warehouse.csv  olist_warehouse_inventory.csv  olist_warehouses.csv
olist-ecommerce/output/: product_id_name_mapping.csv  seller_id_company_name_mapping.csv
