[project]
name = "icb6-eda"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "nbconvert[webpdf]>=7.16.6",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.0.0",
    "python-pptx>=1.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "streamlit>=1.45.0",
]

[tool.uv]
managed = true
